Gramática (Analisador Sintático).txt
main -> blocoinicial

blocoInicial -> (atribuicao | expressao | conta | ifelse | enquanto | para | impressao | leitura)* EOF

bloco -> (atribuicao | expressao | conta | ifelse | enquanto | para | impressao | leitura)* saida

atribuicao -> reservadaTipo id "=" (tipo | conta)

reservadaTipo -> reservada_tipo_inteiro | reservada_tipo_decimal | reservada_tipo_texto | reservada_tipo_caracter | reservada_tipo_binario

tipo -> "Verdadeiro" | "Falso" | num | car | texto | id

conta -> termo (operador_soma_subtracao termo)*

termo -> fator (operador_multiplicacao_divisao fator)*

fator -> num | id | "(" conta ")"

operador -> ">"|">="|"<"|"<="|"=="|"!=" 

operador_soma_subtracao -> "+" | "-"

operador_multiplicacao_divisao -> "*" | "/"

num -> [0-9]+ | .[0-9]+ | [0-9]+.[0-9]+

id -> [a-zA-Z0-9] [a-zA-Z0-9]*  

expressao -> id "=" tipo

ifelse -> "caso" condicao "entao" bloco ("senao" bloco)?

condicao -> id operador (tipo | conta)

enquanto -> "enquanto" condicao ":" bloco

para -> "para" "(" atribuicao ";" condicao ";" somatorio ")" ":"

somatorio -> id("++"|"--")

leitura -> "leitura" "(" reservadaTipo ("," reservadaTipo)* ")" "(" tipo ("," tipo)* ")"

impressao -> "impressao" "(" reservadaTipo ("," reservadaTipo)* ")" "(" tipo ("," tipo)* ")"
